K8S/platformsdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformsdb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformsdb
  template:
    metadata:
      labels:
        app: platformsdb
    spec:
      containers:
        - name: platformsdb
          image: postgres:10.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgresql-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: platformsdb-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformsdb
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: platformsdb-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: platformsdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
