K8S/platformsdb-rds-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformsdb-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: platformsdb
  ports:
    - protocol: TCP
      port: 5432
