K8S/platformsdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformsdb
  labels:
    app: paltformsdb
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: platformsdb
